@@ -40,7 +40,7 @@ class ContextTestCase(unittest.TestCase):
     def test_run_wrong_arg(self):
         ctxt = Context(self.basedir)
         try:
-            ctxt.run(1, 'http://bitten.cmlenz.net/tools/sh', 'exec', {'foo':'bar'})
+            ctxt.run(1, 'http://bitten.edgewall.org/tools/sh', 'exec', {'foo':'bar'})
             self.fail("InvalidRecipeError expected")
         except InvalidRecipeError, e:
             self.failUnless("Unsupported argument 'foo'" in str(e))
